# exercise-blaze

./: .gitignore  CMakeLists.txt  FirstExample.cpp  README.md
.github/workflows/: cmake.yml  linux.yml  windows.yml
app/: CMakeLists.txt  main.cpp
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake
include/: blazeHelpers.h
src/: CMakeLists.txt  blazeHelpers.cpp
test/: CMakeLists.txt  tests.cpp
